syntax = "proto3";

package ai.si_analytics;
option java_outer_classname = "Hello";

service HelloService {
  rpc SayHello (HelloRequest) returns (HelloResponse);
  rpc LotsOfReplies (HelloRequest) returns (stream HelloResponse);
  rpc LotsOfGreetings (stream HelloRequest) returns (HelloResponse);
  rpc BidiHello (stream HelloRequest) returns (stream HelloResponse);
}

message HelloRequest {
  string greeting = 1;
  string name = 2;
}


message HelloResponse {
  string reply = 1;
  string name = 2;
}